k8s/env/dev/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: myapp-worker
  labels:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/component: worker
    app.kubernetes.io/part-of: myapp
    tier: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: myapp
      app.kubernetes.io/component: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myapp
        app.kubernetes.io/component: worker
        app.kubernetes.io/part-of: myapp
        tier: backend
    spec:
      nodeSelector:
        role: app
      containers:
        - name: worker
          image: 326306382233.dkr.ecr.us-east-1.amazonaws.com/repo-worker-image:latest
