k8s/env/dev/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: myapp-frontend
  labels:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: myapp
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
      app.kubernetes.io/part-of: myapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myapp
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: myapp
        tier: frontend
    spec:
      nodeSelector:
        role: app
      containers:
        - name: frontend
          image: 326306382233.dkr.ecr.us-east-1.amazonaws.com/repo-frontend-image:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: frontend-service
spec:
  selector: 
    app.kubernetes.io/name: myapp
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: myapp
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
