k8s/env/dev/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: redis
  labels:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/component: cache-redis
    app.kubernetes.io/part-of: myapp
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: myapp
      app.kubernetes.io/component: cache-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myapp
        app.kubernetes.io/component: cache-redis
        app.kubernetes.io/part-of: myapp
        tier: backend
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports: 
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: redis-service
spec:
  selector:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/component: cache-redis
    app.kubernetes.io/part-of: myapp
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
